services/mattermost/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mattermost
  namespace: mattermost
  annotations:
    cert-manager.io/cluster-issuer: vault-issuer
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 8443
      hostname: mattermost.CHANGEME_DOMAIN
      tls:
        mode: Terminate
        certificateRefs:
          - name: mattermost-CHANGEME_DOMAIN_DASHED-tls
      allowedRoutes:
        namespaces:
          from: Same
