services/mattermost/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mattermost
  namespace: mattermost
  labels:
    app: mattermost
spec:
  parentRefs:
    - name: mattermost
      namespace: mattermost
      sectionName: https
  hostnames:
    - "mattermost.CHANGEME_DOMAIN"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mattermost
          port: 8065
